[gd_scene load_steps=12 format=3 uid="uid://oqhs8tt58meu"]

[ext_resource type="Script" path="res://player_ex.gd" id="1_tmbgk"]
[ext_resource type="ArrayMesh" uid="uid://estj4e1rvhjd" path="res://Meshes/Low Poly Super Destroyer (Color).obj" id="2_hjmur"]
[ext_resource type="AudioStream" uid="uid://msdau8uk6ntq" path="res://Sounds/SFX - Success.ogg" id="3_j63jv"]
[ext_resource type="AudioStream" uid="uid://dhrr8q4dvs4b2" path="res://Sounds/SFX - Death Explosion .ogg" id="4_mnu3e"]
[ext_resource type="AudioStream" uid="uid://c70xq6svmjopl" path="res://Sounds/SFX - Thrusters Long.ogg" id="5_pq421"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="6_x13cc"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="7_0atgc"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="8_y3u4f"]
[ext_resource type="PackedScene" uid="uid://bcbbb1qe847mi" path="res://Entities/trauma_causer.tscn" id="9_aqdhl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fyarc"]
height = 1.96602
radius = 0.357172

[sub_resource type="SphereShape3D" id="SphereShape3D_htw37"]
radius = 30.0

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_tmbgk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.875, 0, -1.63918e-07, 0, 1.875, 0, 1.63918e-07, 0, -1.875, 0, 0, 0)
mesh = ExtResource("2_hjmur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_fyarc")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_j63jv")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_mnu3e")
unit_size = 20.0
emission_angle_filter_attenuation_db = -10.0

[node name="ThrusterAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_pq421")
volume_db = 15.0

[node name="MainThrusterParticles" parent="." instance=ExtResource("6_x13cc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.971849, 0)

[node name="RightThrusterParticles" parent="." instance=ExtResource("6_x13cc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, -0.972, 0)

[node name="LeftThrusterParticles" parent="." instance=ExtResource("6_x13cc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -0.972, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("7_0atgc")]
explosiveness = 0.5

[node name="SuccessParticles" parent="." instance=ExtResource("8_y3u4f")]

[node name="Trauma Causer" parent="." instance=ExtResource("9_aqdhl")]
trauma_amout = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trauma Causer"]
shape = SubResource("SphereShape3D_htw37")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
